- v4. - fix bug in restore from history. - when share image, set subject text with hashtag. - show image and some texts in context menu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="save_all">save all</string>
     <string name="back">back</string>
     <string name="forward">forward</string>
+    <string name="created_at">Created at</string>
+    <string name="copy">Copy</string>
 </resources>
