add backup specification xml. add mark button in context menu. add generate menu in toolbar. long tap in history list to delete history item.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     <string name="seeds">Seeds</string>
     <string name="randomize">Randomize</string>
     <string name="generate">Generate</string>
+    <string name="view">View</string>
+    <string name="send">Send</string>
+    <string name="share">Share</string>
+    <string name="random">random</string>
+    <string name="noise">Noise</string>
+    <string name="mark">Mark</string>
 </resources>
