--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="random">random</string>
     <string name="noise">Noise</string>
     <string name="mark">Mark</string>
+    <string name="naming">Naming</string>
+    <string name="name">Name</string>
+    <string name="e_mail">E-mail</string>
+    <string name="e_mail_empty">E-mail is empty.</string>
+    <string name="name_empty">Name is empty.</string>
+    <string name="e_mail_invalid">E-mail address is not valid.</string>
 </resources>
